unpackaged/main/default/objects/Activity/fields/Compte_Rendu__c.field-meta.xml
<CustomField>
    <fullName>Compte_Rendu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Rendu</label>
    <referenceTo>Compte_rendu__c</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activites</relationshipName>
    <type>Lookup</type>
</CustomField>