unpackaged/main/default/objects/Activity/fields/Date_de_dernier_traitement_de_flux__c.field-meta.xml
<CustomField>
    <fullName>Date_de_dernier_traitement_de_flux__c</fullName>
    <label>Date de dernier traitement de flux</label>
    <type>DateTime</type>
</CustomField>