unpackaged/main/default/objects/Activity/fields/Date_de_la_prochaine_visite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_prochaine_visite__c</fullName>
    <label>Date de la prochaine visite</label>
    <type>DateTime</type>
</CustomField>