unpackaged/main/default/objects/Activity/fields/Icon_Priorite__c.field-meta.xml
<CustomField>
    <fullName>Icon_Priorite__c</fullName>
    <formula>IF 
( 
ISPICKVAL( Priority ,&quot;Élevée&quot;)
, 
IMAGE(&quot;/resource/1552558947000/ICONS_ACT_HIGH_Priority&quot;, &quot;Élevée&quot;, 40 ,40) 
, 
IF 
( 
ISPICKVAL(Priority,&quot;Normale&quot;) 
, 
IMAGE(&quot;/resource/1552558931000/ICONS_ACT_Priority_Low&quot;, &quot;Normale&quot;, 40 ,40) 
, 
&quot;&quot; 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priorité</label>
    <type>Text</type>
</CustomField>