unpackaged/main/default/objects/Activity/fields/Id_externe__c.field-meta.xml
<CustomField>
    <fullName>Id_externe__c</fullName>
    <externalId>true</externalId>
    <label>Id externe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>