unpackaged/main/default/objects/Activity/fields/Id_externe_de_reprise__c.field-meta.xml
<CustomField>
    <fullName>Id_externe_de_reprise__c</fullName>
    <externalId>true</externalId>
    <label>Id externe de reprise</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>