unpackaged/main/default/objects/Activity/fields/Participants_Cerba_HC__c.field-meta.xml
<CustomField>
    <fullName>Participants_Cerba_HC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participants Cerba HC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activites</relationshipName>
    <type>Lookup</type>
</CustomField>