unpackaged/main/default/objects/Activity/fields/TECH_Saisie_SFDC__c.field-meta.xml
<CustomField>
    <fullName>TECH_Saisie_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Saisie SFDC</label>
    <type>Checkbox</type>
</CustomField>