unpackaged/main/default/objects/Activity/fields/Type_d_appel__c.field-meta.xml
<CustomField>
    <fullName>Type_d_appel__c</fullName>
    <label>Type d&#39;appel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plainte logistique</fullName>
            </value>
            <value>
                <fullName>Plainte technique</fullName>
            </value>
            <value>
                <fullName>Question médicale</fullName>
            </value>
            <value>
                <fullName>Question logistique</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Non conformité</fullName>
            </value>
            <value>
                <fullName>Demande de résultat</fullName>
            </value>
            <value>
                <fullName>Appel Transfere</fullName>
                <label>Appel transféré</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>