unpackaged/main/default/objects/Activity/fields/Type_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Type_de_creation__c</fullName>
    <label>Type de creation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visite</fullName>
            </value>
            <value>
                <fullName>Appel</fullName>
            </value>
            <value>
                <fullName>Tâche</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Compte</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>Contrat</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Affaire</fullName>
            </value>
            <value>
                <fullName>Réclamation</fullName>
            </value>
            <value>
                <fullName>Relance Clinique 1</fullName>
            </value>
            <value>
                <fullName>Relance Proprio 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>